# learningC

./: .gitignore  CMakeLists.txt  README.md  learnLog.md  tmp.c
basic/: copy_input_to_output.c  count_characters.c  count_lines.c  count_words.c  fahrenheit-celsius-table.c  fahrenheit-for-loop.c  function_power.c  get_max_length_line.c  get_max_length_line_external_variable.c
pat/: CMakeLists.txt  pat.c
pat/Basic_Level_Pratice/: 1001.c  1002.c  1003.c  1004.c  1005.c  1006.c  1007.c  1008.c  1009.c  1010.c  1011.c  1012.c  1013.c  1014.c  1015.c  1016.c  1017.c  1018.c  1019.c  1020.c  1021.c  1022.c  1023.c  1024.c  1026.c  1027.c  1028.c  1029.c  1056.c  CMakeLists.txt  addFileCmd.sh
pat/zhongM2018/: CMakeLists.txt  q6-3.c  q6-4.c  q7-14.c  q7-19.c  q7-20.c  q7-20_2.c  q7-27.c
tcpl/: CMakeLists.txt  README.md
tcpl/CodeFromBook/: customIO.c  customIO.h  index.c
tcpl/chapter3/: Exercise3_4.c  Exercise3_5.c  Exercise3_6.c  itoa.c
