cmake_minimum_required(VERSION 3.12)
project(Basic_Level_Pratice)

set(CMAKE_C_STANDARD 99)

add_executable(basic_1001 pat/Basic_Level_Pratice/1001.c)
add_executable(basic_1002 pat/Basic_Level_Pratice/1002.c)
add_executable(basic_1003 pat/Basic_Level_Pratice/1003.c)
add_executable(basic_1004 pat/Basic_Level_Pratice/1004.c)
add_executable(basic_1005 pat/Basic_Level_Pratice/1005.c)

