cmake_minimum_required(VERSION 3.12)
project(Basic_Level_Pratice)

set(CMAKE_C_STANDARD 99)

add_executable(basic_1001 pat/Basic_Level_Pratice/1001.c)
add_executable(basic_1002 pat/Basic_Level_Pratice/1002.c)
add_executable(basic_1003 pat/Basic_Level_Pratice/1003.c)
add_executable(basic_1004 pat/Basic_Level_Pratice/1004.c)
add_executable(basic_1005 pat/Basic_Level_Pratice/1005.c)
add_executable(basic_1006 pat/Basic_Level_Pratice/1006.c)
add_executable(basic_1007 pat/Basic_Level_Pratice/1007.c)
add_executable(basic_1008 pat/Basic_Level_Pratice/1008.c)
add_executable(basic_1009 pat/Basic_Level_Pratice/1009.c)
add_executable(basic_1010 pat/Basic_Level_Pratice/1010.c)
add_executable(basic_1011 pat/Basic_Level_Pratice/1011.c)
add_executable(basic_1012 pat/Basic_Level_Pratice/1012.c)
add_executable(basic_1013 pat/Basic_Level_Pratice/1013.c)
add_executable(basic_1014 pat/Basic_Level_Pratice/1014.c)
add_executable(basic_1015 pat/Basic_Level_Pratice/1015.c)
add_executable(basic_1016 pat/Basic_Level_Pratice/1016.c)
add_executable(basic_1017 pat/Basic_Level_Pratice/1017.c)
add_executable(basic_1018 pat/Basic_Level_Pratice/1018.c)
add_executable(basic_1019 pat/Basic_Level_Pratice/1019.c)
add_executable(basic_1020 pat/Basic_Level_Pratice/1020.c)
add_executable(basic_1021 pat/Basic_Level_Pratice/1021.c)
add_executable(basic_1022 pat/Basic_Level_Pratice/1022.c)
add_executable(basic_1023 pat/Basic_Level_Pratice/1023.c)
add_executable(basic_1024 pat/Basic_Level_Pratice/1024.c)
add_executable(basic_1025 pat/Basic_Level_Pratice/1025.c)
add_executable(basic_1026 pat/Basic_Level_Pratice/1026.c)
add_executable(basic_1027 pat/Basic_Level_Pratice/1027.c)
add_executable(basic_1028 pat/Basic_Level_Pratice/1028.c)
add_executable(basic_1029 pat/Basic_Level_Pratice/1029.c)
add_executable(basic_1030 pat/Basic_Level_Pratice/1030.c)
add_executable(basic_1031 pat/Basic_Level_Pratice/1031.c)
add_executable(basic_1032 pat/Basic_Level_Pratice/1032.c)
add_executable(basic_1033 pat/Basic_Level_Pratice/1033.c)
add_executable(basic_1034 pat/Basic_Level_Pratice/1034.c)
add_executable(basic_1035 pat/Basic_Level_Pratice/1035.c)
add_executable(basic_1036 pat/Basic_Level_Pratice/1036.c)
add_executable(basic_1037 pat/Basic_Level_Pratice/1037.c)
add_executable(basic_1038 pat/Basic_Level_Pratice/1038.c)
add_executable(basic_1039 pat/Basic_Level_Pratice/1039.c)
add_executable(basic_1040 pat/Basic_Level_Pratice/1040.c)
add_executable(basic_1041 pat/Basic_Level_Pratice/1041.c)
add_executable(basic_1042 pat/Basic_Level_Pratice/1042.c)
add_executable(basic_1043 pat/Basic_Level_Pratice/1043.c)
add_executable(basic_1044 pat/Basic_Level_Pratice/1044.c)
add_executable(basic_1045 pat/Basic_Level_Pratice/1045.c)
add_executable(basic_1046 pat/Basic_Level_Pratice/1046.c)
add_executable(basic_1047 pat/Basic_Level_Pratice/1047.c)
add_executable(basic_1048 pat/Basic_Level_Pratice/1048.c)
add_executable(basic_1049 pat/Basic_Level_Pratice/1049.c)
add_executable(basic_1050 pat/Basic_Level_Pratice/1050.c)
add_executable(basic_1051 pat/Basic_Level_Pratice/1051.c)
add_executable(basic_1052 pat/Basic_Level_Pratice/1052.c)
add_executable(basic_1053 pat/Basic_Level_Pratice/1053.c)
add_executable(basic_1054 pat/Basic_Level_Pratice/1054.c)
add_executable(basic_1055 pat/Basic_Level_Pratice/1055.c)
add_executable(basic_1056 pat/Basic_Level_Pratice/1056.c)
add_executable(basic_1057 pat/Basic_Level_Pratice/1057.c)
add_executable(basic_1058 pat/Basic_Level_Pratice/1058.c)
add_executable(basic_1059 pat/Basic_Level_Pratice/1059.c)
add_executable(basic_1060 pat/Basic_Level_Pratice/1060.c)
add_executable(basic_1061 pat/Basic_Level_Pratice/1061.c)
add_executable(basic_1062 pat/Basic_Level_Pratice/1062.c)
add_executable(basic_1063 pat/Basic_Level_Pratice/1063.c)
add_executable(basic_1064 pat/Basic_Level_Pratice/1064.c)
add_executable(basic_1065 pat/Basic_Level_Pratice/1065.c)
add_executable(basic_1066 pat/Basic_Level_Pratice/1066.c)
add_executable(basic_1067 pat/Basic_Level_Pratice/1067.c)
add_executable(basic_1068 pat/Basic_Level_Pratice/1068.c)
add_executable(basic_1069 pat/Basic_Level_Pratice/1069.c)
add_executable(basic_1070 pat/Basic_Level_Pratice/1070.c)
add_executable(basic_1071 pat/Basic_Level_Pratice/1071.c)
add_executable(basic_1072 pat/Basic_Level_Pratice/1072.c)
add_executable(basic_1073 pat/Basic_Level_Pratice/1073.c)
add_executable(basic_1074 pat/Basic_Level_Pratice/1074.c)
add_executable(basic_1075 pat/Basic_Level_Pratice/1075.c)
add_executable(basic_1076 pat/Basic_Level_Pratice/1076.c)
add_executable(basic_1077 pat/Basic_Level_Pratice/1077.c)
add_executable(basic_1078 pat/Basic_Level_Pratice/1078.c)
add_executable(basic_1079 pat/Basic_Level_Pratice/1079.c)
add_executable(basic_1080 pat/Basic_Level_Pratice/1080.c)
add_executable(basic_1081 pat/Basic_Level_Pratice/1081.c)
add_executable(basic_1082 pat/Basic_Level_Pratice/1082.c)
add_executable(basic_1083 pat/Basic_Level_Pratice/1083.c)
add_executable(basic_1084 pat/Basic_Level_Pratice/1084.c)
add_executable(basic_1085 pat/Basic_Level_Pratice/1085.c)
add_executable(basic_1086 pat/Basic_Level_Pratice/1086.c)
add_executable(basic_1087 pat/Basic_Level_Pratice/1087.c)
add_executable(basic_1088 pat/Basic_Level_Pratice/1088.c)
add_executable(basic_1089 pat/Basic_Level_Pratice/1089.c)
add_executable(basic_1090 pat/Basic_Level_Pratice/1090.c)
add_executable(basic_1091 pat/Basic_Level_Pratice/1091.c)
add_executable(basic_1092 pat/Basic_Level_Pratice/1092.c)
add_executable(basic_1093 pat/Basic_Level_Pratice/1093.c)
add_executable(basic_1094 pat/Basic_Level_Pratice/1094.c)
add_executable(basic_1095 pat/Basic_Level_Pratice/1095.c)

