cmake_minimum_required(VERSION 3.12)
project(zhongM2018)

set(CMAKE_C_STANDARD 99)


#file(GLOB zhongM_Code-Completion_path
#        "pat/zhongM2018/*.h"
#        "pat/zhongM2018/*.c"
#        )


add_executable(zhongM_Code-Completion_q6-4 pat/zhongM2018/q6-4.c)
add_executable(zhongM_Code-Completion_q6-3 pat/zhongM2018/q6-3.c)
add_executable(zhongM_Programming_q7.14 pat/zhongM2018/q7-14.c)
add_executable(zhongM_Programming_q7.19 pat/zhongM2018/q7-19.c)
add_executable(zhongM_Programming_q7.20 pat/zhongM2018/q7-20.c)
add_executable(zhongM_Programming_q7.20_2 pat/zhongM2018/q7-20_2.c)
add_executable(zhongM_Programming_q7.27 pat/zhongM2018/q7-27.c)
